Handle missing layer and region data.
It's possible that a trace will be missing the layer children and region
information.  Don't try to access the information unless we have the objects
needed.

R=nduca@chromium.org

Review URL: https://codereview.appspot.com/139710043

--- a/trunk/trace_viewer/cc/layer_tree_impl.html
+++ b/trunk/trace_viewer/cc/layer_tree_impl.html
@@ -114,8 +114,10 @@ tvcm.exportTo('cc', function() {
           return;
         visitedLayers[layer.layerId] = true;
         func.call(thisArg, layer, depth, isMask, isReplica);
-        for (var i = 0; i < layer.children.length; i++)
-          visitLayer(layer.children[i], depth + 1);
+        if (layer.children) {
+          for (var i = 0; i < layer.children.length; i++)
+            visitLayer(layer.children[i], depth + 1);
+        }
         if (layer.maskLayer)
           visitLayer(layer.maskLayer, depth + 1, true, false);
         if (layer.replicaLayer)
