Add TrackVisitor class

--- a/trace_viewer/tracing/tracks/container_track.html
+++ b/trace_viewer/tracing/tracks/container_track.html
@@ -22,6 +22,8 @@ tv.exportTo('tracing.tracks', function() {
   ContainerTrack.prototype = {
     __proto__: tracing.tracks.Track.prototype,
 
+    TRACK_CLASS_NAME_: 'ContainerTrack',
+
     decorate: function(viewport) {
       tracing.tracks.Track.prototype.decorate.call(this, viewport);
     },
