--- a/trace_viewer/tracing/tracks/multi_row_track.html
+++ b/trace_viewer/tracing/tracks/multi_row_track.html
@@ -28,6 +28,8 @@ tv.exportTo('tracing.tracks', function() {
 
     __proto__: tracing.tracks.ContainerTrack.prototype,
 
+    TRACK_CLASS_NAME_: 'MultiRowTrack',
+
     decorate: function(viewport) {
       tracing.tracks.ContainerTrack.prototype.decorate.call(this, viewport);
       this.tooltip_ = '';
