--- a/trace_viewer/tracing/tracks/stacked_bars_track.html
+++ b/trace_viewer/tracing/tracks/stacked_bars_track.html
@@ -25,6 +25,8 @@ tv.exportTo('tracing.tracks', function() {
 
     __proto__: tracing.tracks.HeadingTrack.prototype,
 
+    TRACK_CLASS_NAME_: 'StackedBarsTrack',
+
     decorate: function(viewport) {
       tracing.tracks.HeadingTrack.prototype.decorate.call(this, viewport);
       this.classList.add('stacked-bars-track');
