--- a/trace_viewer/tracing/tracks/thread_track.html
+++ b/trace_viewer/tracing/tracks/thread_track.html
@@ -29,6 +29,8 @@ tv.exportTo('tracing.tracks', function() {
   ThreadTrack.prototype = {
     __proto__: tracing.tracks.ContainerTrack.prototype,
 
+    TRACK_CLASS_NAME_: 'ThreadTrack',
+
     decorate: function(viewport) {
       tracing.tracks.ContainerTrack.prototype.decorate.call(this, viewport);
       this.classList.add('thread-track');
