--- a/trace_viewer/tracing/tracks/async_slice_group_track.html
+++ b/trace_viewer/tracing/tracks/async_slice_group_track.html
@@ -26,6 +26,8 @@ tv.exportTo('tracing.tracks', function() {
 
     __proto__: tracing.tracks.MultiRowTrack.prototype,
 
+    TRACK_CLASS_NAME_: 'AsyncSliceGroupTrack',
+
     decorate: function(viewport) {
       tracing.tracks.MultiRowTrack.prototype.decorate.call(this, viewport);
       this.classList.add('async-slice-group-track');
