--- a/trace_viewer/tracing/tracks/object_instance_group_track.html
+++ b/trace_viewer/tracing/tracks/object_instance_group_track.html
@@ -27,6 +27,8 @@ tv.exportTo('tracing.tracks', function() {
 
     __proto__: tracing.tracks.MultiRowTrack.prototype,
 
+    TRACK_CLASS_NAME_: 'ObjectInstanceGroupTrack',
+
     decorate: function(viewport) {
       tracing.tracks.MultiRowTrack.prototype.decorate.call(this, viewport);
       this.classList.add('object-instance-group-track');
