--- a/trace_viewer/tracing/tracks/process_track_base.html
+++ b/trace_viewer/tracing/tracks/process_track_base.html
@@ -38,6 +38,8 @@ tv.exportTo('tracing.tracks', function() {
 
     __proto__: tracing.tracks.ContainerTrack.prototype,
 
+    TRACK_CLASS_NAME_: 'ProcessTrackBase',
+
     decorate: function(viewport) {
       tracing.tracks.ContainerTrack.prototype.decorate.call(this, viewport);
 
