--- a/trace_viewer/tracing/tracks/rect_track.html
+++ b/trace_viewer/tracing/tracks/rect_track.html
@@ -30,6 +30,8 @@ tv.exportTo('tracing.tracks', function() {
 
     __proto__: tracing.tracks.HeadingTrack.prototype,
 
+    TRACK_CLASS_NAME_: 'RectTrack',
+
     decorate: function(viewport) {
       tracing.tracks.HeadingTrack.prototype.decorate.call(this, viewport);
       this.classList.add('rect-track');
