--- a/trace_viewer/tracing/tracks/ruler_track.html
+++ b/trace_viewer/tracing/tracks/ruler_track.html
@@ -32,6 +32,8 @@ tv.exportTo('tracing.tracks', function() {
   RulerTrack.prototype = {
     __proto__: tracing.tracks.HeadingTrack.prototype,
 
+    TRACK_CLASS_NAME_: 'RulerTrack',
+
     decorate: function(viewport) {
       tracing.tracks.HeadingTrack.prototype.decorate.call(this, viewport);
       this.classList.add('ruler-track');
