--- a/trace_viewer/tracing/tracks/slice_track.html
+++ b/trace_viewer/tracing/tracks/slice_track.html
@@ -23,6 +23,8 @@ tv.exportTo('tracing.tracks', function() {
 
     __proto__: tracing.tracks.RectTrack.prototype,
 
+    TRACK_CLASS_NAME_: 'SliceTrack',
+
     decorate: function(viewport) {
       tracing.tracks.RectTrack.prototype.decorate.call(this, viewport);
     },
