--- a/trace_viewer/base/ui/dom_helpers.html
+++ b/trace_viewer/base/ui/dom_helpers.html
@@ -124,15 +124,18 @@ tv.exportTo('tv.b.ui', function() {
     return selectorEl;
   }
 
-  function createEditCategorySpan(optionGroupEl, targetEl) {
-    var spanEl = createSpan({className: 'edit-categories'});
-    spanEl.textContent = 'Edit categories';
-    spanEl.classList.add('labeled-option');
-
-    spanEl.addEventListener('click', function() {
-      targetEl.onClickEditCategories();
-    });
-    return spanEl;
+  function createTabStripItem(targetEl, parentEl, properties) {
+    var tabStripLabel = document.createElement('tab-strip-label');
+    tabStripLabel.textContent = properties.title;
+    tabStripLabel.setAttribute('enabled', properties.enabled);
+    tabStripLabel.setAttribute('selected', properties.selected);
+    tabStripLabel.classList.add(properties.class);
+    if (properties.callback) {
+      tabStripLabel.addEventListener('click',
+          targetEl.onActivatedTabChanged.bind(targetEl, tabStripLabel));
+    }
+    parentEl.appendChild(tabStripLabel);
+    return tabStripLabel;
   }
 
   function createOptionGroup(targetEl, targetElProperty,
@@ -167,9 +170,19 @@ tv.exportTo('tv.b.ui', function() {
       labelEl.textContent = item.label;
       labelEl.setAttribute('for', id);
 
+      var buttonEl = document.createElement('input');
+      buttonEl.type = 'button';
+      buttonEl.value = 'Customize ...';
+      buttonEl.id = 'modify-' + id;
+      buttonEl.classList.add('labeled-option-customize');
+      buttonEl.addEventListener('click', function() {
+                                    targetEl.onClickCustomizeOption();
+                                });
+
       var spanEl = createSpan({className: 'labeled-option'});
       spanEl.appendChild(radioEl);
       spanEl.appendChild(labelEl);
+      spanEl.appendChild(buttonEl);
 
       spanEl.__defineSetter__('checked', function(opt_bool) {
         var changed = radioEl.checked !== (!!opt_bool);
@@ -185,13 +198,6 @@ tv.exportTo('tv.b.ui', function() {
 
       optionGroupEl.appendChild(spanEl);
     }
-    optionGroupEl.appendChild(createEditCategorySpan(optionGroupEl, targetEl));
-    // Since this option group element is not yet added to the tree,
-    // querySelector will fail during updateEditCategoriesStatus_ call.
-    // Hence, creating the element with the 'expanded' classlist category
-    // added, if last selected value was 'Manual' selection.
-    if (!initialValue.length)
-      optionGroupEl.classList.add('categories-expanded');
     targetEl[targetElProperty] = initialValue;
 
     return optionGroupEl;
@@ -255,6 +261,7 @@ tv.exportTo('tv.b.ui', function() {
     createDiv: createDiv,
     createScopedStyle: createScopedStyle,
     createSelector: createSelector,
+    createTabStripItem: createTabStripItem,
     createOptionGroup: createOptionGroup,
     createCheckBox: createCheckBox,
     isElementAttachedToDocument: isElementAttachedToDocument
