--- a/trace_viewer/core/location.html
+++ b/trace_viewer/core/location.html
@@ -6,7 +6,6 @@ found in the LICENSE file.
 -->
 
 <link rel="import" href="/base/base.html">
-<link rel="import" href="/core/tracks/track.html">
 
 <script>
 'use strict';
@@ -52,6 +51,27 @@ tv.exportTo('tv.c', function() {
   };
 
   Location.prototype = {
+
+    get xWorld() {
+      return this.xWorld_;
+    },
+
+    /**
+     * Returns the first valid containing track based on the
+     * internal yComponents.
+     */
+    get containingTrack() {
+      if (this.viewport_ !== undefined) {
+        var containerToTrack = this.viewport_.containerToTrackObj;
+        for (var i in this.yComponents_) {
+          var yComponent = this.yComponents_[i];
+          var track = containerToTrack.getTrackByStableId(yComponent.stableId);
+          if (track !== undefined)
+            return track;
+        }
+      }
+    },
+
     fromViewCoordinates: function(viewX, viewY) {
       var dt = this.viewport_.currentDisplayTransform;
       this.xWorld_ = Math.round(dt.xViewToWorld(viewX));
@@ -67,7 +87,30 @@ tv.exportTo('tv.c', function() {
           this.yComponents_.push(
               new YComponent(elem.eventContainer.stableId, yPercentOffset));
         }
+        elem = elem.parentElement;
+      }
+    },
 
+    fromStableIdAndTimestamp: function(stableId, ts) {
+      var dt = this.viewport_.currentDisplayTransform;
+      this.xWorld_ = ts;
+
+      // The y components' percentage offsets will be calculated with respect to
+      // the boundingRect's top of containing track.
+      this.yComponents_ = [];
+      var containerToTrack = this.viewport_.containerToTrackObj;
+      var elem = containerToTrack.getTrackByStableId(stableId);
+      if (!elem)
+        return;
+
+      var firstY = elem.getBoundingClientRect().top;
+      while (elem instanceof tv.c.tracks.Track) {
+        if (elem.eventContainer) {
+          var boundRect = elem.getBoundingClientRect();
+          var yPercentOffset = (firstY - boundRect.top) / boundRect.height;
+          this.yComponents_.push(
+              new YComponent(elem.eventContainer.stableId, yPercentOffset));
+        }
         elem = elem.parentElement;
       }
     },
