--- a/trace_viewer/core/find_controller_test.html
+++ b/trace_viewer/core/find_controller_test.html
@@ -236,5 +236,35 @@ tv.b.unittest.testSuite(function() {
     });
     return promise;
   });
+
+  test('findControllerNavigation', function() {
+    var model = new tv.c.TraceModel();
+    var p1 = model.getOrCreateProcess(1);
+    var t1 = p1.getOrCreateThread(2);
+    t1.sliceGroup.pushSlice(new tv.c.trace_model.ThreadSlice(
+        '', 'a', 0, 1, {}, 3));
+
+    var timeline = new tv.c.TimelineTrackView();
+    var vp = new tv.c.TimelineViewport(timeline);
+    timeline.model = model;
+    timeline.focusElement = timeline;
+    timeline.tabIndex = 0;
+    timeline.style.maxHeight = '600px';
+    this.addHTMLOutput(timeline);
+
+    var controller = new tv.c.FindController();
+    controller.timeline = timeline;
+    controller.filterText = '2000@1.2x7';
+
+    var cbCalls = 0;
+    timeline.navToPosition = function(location, scaleX) {
+      assertEquals(2000, location.xWorld);
+      assertEquals('1.2', location.containingTrack.eventContainer.stableId);
+      assertEquals(7, scaleX);
+      cbCalls++;
+    };
+    controller.updateFilterHits();
+    assertEquals(1, cbCalls);
+  });
 });
 </script>
