Allow category value to be searched in filter controller
Allow category value to be searched in filter controller

Search box doesn't allow searching for category names. User should be
able to search in the trace even by category names.
Add a new search filter which searches inputted text against either of
function title or category name under which function is registered.

BUG=#539

TEST=Updated filter_test.html

--- a/trace_viewer/core/filter.html
+++ b/trace_viewer/core/filter.html
@@ -60,6 +60,25 @@ tv.exportTo('tv.c', function() {
     }
   };
 
+  function TitleOrCategoryFilter(text) {
+    Filter.call(this);
+    this.text_ = text;
+
+    if (!text.length)
+      throw new Error('Filter text is empty');
+  }
+  TitleOrCategoryFilter.prototype = {
+    __proto__: Filter.prototype,
+
+    matchSlice: function(slice) {
+      if (slice.title === undefined && slice.category === undefined)
+        return false;
+      return slice.title.toLowerCase().indexOf(
+                this.text_.toLowerCase()) !== -1 ||
+             slice.category.indexOf(this.text_) !== -1;
+    }
+  };
+
   /**
    * @constructor A filter that matches objects with the exact given title.
    */
@@ -80,7 +99,8 @@ tv.exportTo('tv.c', function() {
 
   return {
     TitleFilter: TitleFilter,
-    ExactTitleFilter: ExactTitleFilter
+    ExactTitleFilter: ExactTitleFilter,
+    TitleOrCategoryFilter: TitleOrCategoryFilter
   };
 });
 </script>
