--- a/trace_viewer/core/filter_test.html
+++ b/trace_viewer/core/filter_test.html
@@ -15,6 +15,7 @@ found in the LICENSE file.
 tv.b.unittest.testSuite(function() {
   var TitleFilter = tv.c.TitleFilter;
   var ExactTitleFilter = tv.c.ExactTitleFilter;
+  var TitleOrCategoryFilter = tv.c.TitleOrCategoryFilter;
 
   test('titleFilter', function() {
     assertThrows(function() {
@@ -57,6 +58,30 @@ tv.b.unittest.testSuite(function() {
     assertFalse(new ExactTitleFilter('Abc').matchSlice(s1));
     assertFalse(new ExactTitleFilter('bc').matchSlice(s1));
     assertFalse(new ExactTitleFilter('a').matchSlice(s1));
+  });
+
+  test('titleOrCategoryFilter', function() {
+    assertThrows(function() {
+      new TitleOrCategoryFilter();
+    });
+    assertThrows(function() {
+      new TitleOrCategoryFilter('');
+    });
+
+    var s0 = tv.c.test_utils.newSliceCategory('cat', 'a', 1, 3);
+    assertTrue(new TitleOrCategoryFilter('a').matchSlice(s0));
+    assertTrue(new TitleOrCategoryFilter('cat').matchSlice(s0));
+    assertTrue(new TitleOrCategoryFilter('at').matchSlice(s0));
+    assertFalse(new TitleOrCategoryFilter('b').matchSlice(s0));
+    assertFalse(new TitleOrCategoryFilter('X').matchSlice(s0));
+
+    var s1 = tv.c.test_utils.newSliceCategory('cat', 'abc', 1, 3);
+    assertTrue(new TitleOrCategoryFilter('abc').matchSlice(s1));
+    assertTrue(new TitleOrCategoryFilter('Abc').matchSlice(s1));
+    assertTrue(new TitleOrCategoryFilter('cat').matchSlice(s1));
+    assertFalse(new TitleOrCategoryFilter('Cat').matchSlice(s1));
+    assertFalse(new TitleOrCategoryFilter('cat1').matchSlice(s1));
+    assertFalse(new TitleOrCategoryFilter('X').matchSlice(s1));
   });
 });
 </script>
