--- a/trace_viewer/extras/highlighter/vsync_highlighter.html
+++ b/trace_viewer/extras/highlighter/vsync_highlighter.html
@@ -40,7 +40,11 @@ tv.exportTo('tv.e.highlighter', function() {
 
   VSyncHighlighter.VSYNC_COUNTER_PRECISIONS = {
     // Android. Seems to appear in sample systrace only.
-    'android.VSYNC': 15
+    'android.VSYNC': 15,
+    
+    // Android. Some versions have VSYNC split out into VSYNC-app and VSYNC-sf.
+    // Requires "gfx" systrace category to be enabled.
+    'android.VSYNC-app': 15,
   };
 
   VSyncHighlighter.VSYNC_SLICE_PRECISIONS = {
